--- a/_lessons/packages.html
+++ b/_lessons/packages.html
@@ -42,8 +42,8 @@ And from there we can talk a little bit about writing custom tests + using custo
 ```yml
 # packages.yml
 packages:
-  - package: fishtown-analytics/dbt_utils
-    version: 0.6.2
+  - package: dbt-labs/dbt_utils
+    version: 0.8.0
 
 ```
 
