--- a/_lessons/testing.html
+++ b/_lessons/testing.html
@@ -107,7 +107,7 @@ select count(*) from (
 
 Run all tests: `dbt test`
 
-Run specific tests: `dbt test -m one_specific_model`
+Run specific tests: `dbt test -s one_specific_model`
 
 
 ---
