update certificate slide

--- a/_lessons/outro.html
+++ b/_lessons/outro.html
@@ -44,8 +44,17 @@ class: title, center, middle
 
 
 ---
-class: title, center, middle
 
-# Certificates 🏅
+# Earn the dbt Fundamentals badge 🏅
 
-Please email [kcoapman@fishtownanalytics.com](mailto:kcoapman@fishtownanalytics.com) with your mailing address if you would like us to mail you a certificate.
+.left-column-33[
+<img src="/ui/img/fundamentals-badge.png" class="img-center">
+]
+
+.right-column-66[
+- Through this training you have learned the fundamentals of dbt and more! 
+- You will automatically be added to the dbt Fundamentals quiz at [courses.getdbt.com](courses.getdbt.com).  
+- Login with your email to demonstrate your knowledge and skills to earn the dbt Fundamentals badge.
+- Share this with your network on LinkedIn!
+- Email [training@dbtlabs.com](mailto:training@dbtlabs.com) if you have questions.
+]
