--- a/_lessons/testing.html
+++ b/_lessons/testing.html
@@ -26,6 +26,11 @@ _**Analytics code should have quality assurance**_
 * _Run automated tests on source data and on transformed data to ensure that SQL works as intended_
 * _Ensure source data is up to date_
 
+???
+Previously, we'd given a broad overview of our viewpoints. Part of this viewpoint
+is our belief that our code should have quality assurance. To do this we need to be able to:
+[Read out bullet points on the slide]
+
 ---
 # What are tests?
 
@@ -37,6 +42,9 @@ You configure tests in YML, in the `models` directory.
 
 Behind the scenes, test are just `select` statements!
 
+???
+> So, what do we mean when we talk about "tests"?
+[Read slide]
 ---
 # Examples:
 .left-column[
@@ -52,6 +60,27 @@ models:
 
 ```
 ]
+
+???
+**
+
+You can pause here to exemplify this and the following slides in dbt Cloud 
+for tests on uniqueness and not null. You should hit these points:
+- Setting up a not null test
+- Showing the underlying code after running the test using the run details.
+- Setting up a uniqueness test
+- Showing the underlying code after running the test using the run details.
+
+If you pause here for an example, you can start out with "So to recap:" for
+this and the following test examples.
+**
+
+
+> 
+We set up tests using our .yml configuration files. Here's an example 
+of a test which ensures that our customer_id key in our customers model is
+not null.
+
 --
 .right-column[
 ```sql
@@ -65,8 +94,15 @@ where customer_id is null
 ```
 
 ]
+
 ???
-Teacher notes: talk about how these relate
+[Teacher notes: talk about how these relate]
+
+> 
+Here's the underlying SQL that runs on the results of our customers table.
+It returns number of records in our customers table where our customer_id 
+is null.
+
 ---
 
 # Examples:
