Testing change to speaker notes

--- a/_lessons/testing.html
+++ b/_lessons/testing.html
@@ -27,15 +27,17 @@ _**Analytics code should have quality assurance**_
 * _Ensure source data is up to date_
 
 ???
-""
-Previously, we've given a broad overview of our viewpoints. 
-Part of this viewpoint is our belief that our code should have quality 
-assurance. 
-
-To do this we need to be able to:
-""
-
-[Read out bullet points on the slide]
+""  
+Previously, we've given a broad overview of our viewpoints.  
+Part of this viewpoint is our belief that our code should have quality  
+assurance.  
+  
+To do this we need to be able to:  
+""  
+  
+[------------------------------ Teacher Notes ---------------------------------]  
+Read out bullet points on the slide  
+[------------------------------------------------------------------------------]  
 
 ---
 # What are tests?
